--- a/src/pages/day/[yearMonthDay].astro
+++ b/src/pages/day/[yearMonthDay].astro
@@ -77,7 +77,7 @@ export const getStaticPaths = (() => {
       </div>
     </header>
     <main class="w-full flex justify-center items-center flex-col">
-      <div class="w-3/5 max-w-[500px] relative">
+      <div class="w-3/5 max-w-[500px] relative p-4 md:p-10">
         <Moon
           phaseName={todayMoon.phaseName}
           percentage={todayMoon.lighting}
@@ -112,7 +112,7 @@ export const getStaticPaths = (() => {
               href={`/day/${year}-${month}-${monthDay}`}
             >
               <span>{monthDay}</span>
-              <div class="w-4/5 max-w-[500px]">
+              <div class="w-4/5 max-w-[500px] p-1 md:p-2">
                 <Moon phaseName={phase.phaseName} percentage={phase.lighting} />
               </div>
               <span class="text-center leading-4 capitalize mb-2 text-xs px-4">
