--- a/src/pages/month/[yearMonth].astro
+++ b/src/pages/month/[yearMonth].astro
@@ -87,7 +87,7 @@ export const getStaticPaths = (() => {
               <div class="w-full flex justify-end md:mr-4 mr-1 md:-mb-1">
                 <span class="text-white font-bold md:text-lg">{dayNumber}</span>
               </div>
-              <div class="md:w-3/4 relative w-full">
+              <div class="md:w-3/4 relative w-full p-1.5">
                 <Moon phaseName={phase.phaseName} percentage={phase.lighting} />
               </div>
             </a>
